<resources>
    <string name="app_name">TopNews</string>
    <string name="app_chinese_name">头条新闻</string>
    <string name="home_index">首页</string>
    <string name="mine_index">我的</string>
    <string name="mine_index_not_login">未登录</string>
    <string name="loading">努力加载中...</string>
    <string name="mine_favorite">收藏</string>
    <string name="mine_history">历史</string>
    <string name="mine_night_mode">夜间</string>
    <string name="mine_day_mode">日间</string>
    <string name="mine_broke_news">我要爆料</string>
    <string name="mine_user_feed_back">用户反馈</string>
    <string name="mine_app_settings">系统设置</string>
    <string name="mine_login_sucess">登录成功</string>
    <string name="mine_login_failed">登录失败</string>
    <string name="toast_load_news_failure">网络错误，请稍后重试！</string>
    <string name="loading_dialog_message">客官，请稍后...</string>
    <string name="share">分享</string>
    <string name="share_circle">朋友圈</string>
    <string name="share_weixin">微信好友</string>
    <string name="share_weibo">微博</string>
    <string name="share_qq">QQ</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_cancle">取消</string>
    <string name="favourite_success">收藏成功</string>
    <string name="favourite_cancle">取消收藏</string>
    <string name="favourite_history">收藏/历史</string>
    <string name="network_not_available">网络不可用，请联网！</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_send">发送</string>
    <string name="feedback_hint_content">如需传图，请点击右边</string>
    <string name="feedback_contact">QQ、邮箱或手机等联系方式</string>
    <string name="feedback_contact_hint">您的联系方式有助于我们沟通和解决问题，仅工作人员可见</string>
    <string name="feedback_upload_pic">上传图片</string>
    <string name="feedback_toast_say_something">说点什么吧</string>
    <string name="feedback_toast_toast_sending">发送中...</string>
    <string name="feedback_toast_sending_success">反馈成功</string>
    <string name="feedback_dialog_get_pic_from_album">手机相册</string>
    <string name="feedback_dialog_get_pic_cancle">取消</string>
    <string name="feedback_dialog_get_pic_delete">删除图片</string>
    <string name="login_more_ways">更多登录方式</string>
    <string name="login_phone_number">手机号</string>
    <string name="login_send_identifying_code">|  发送验证码</string>
    <string name="login_input_identifying_code">请输入验证码</string>
    <string name="login_input_auto_login">未注册手机验证后自动登录</string>
    <string name="login_entry_topnews">进入TopNews</string>
    <string name="login_with_count_password">账号密码登录</string>
    <string name="login_with_not_password">免密码登录</string>
    <string name="login_find_my_password">|  找回密码</string>
    <string name="login_dialog_with_identify_code_title">登录TopNews，精彩永不丢失</string>
    <string name="login_dialog_user_agreement">我已阅读并同意“用户协议和隐私条款”</string>
    <string name="logint_dialog_password">密码</string>
    <string name="login_dialog_toast_phone_number_illegal">手机号码错误</string>
    <string name="login_dialog_toast_has_send_sms_code">已发送验证码</string>
    <string name="login_dialog_toast_send_sms_code_failed">发送失败，请稍后重试！</string>
    <string name="login_dialog_toast_sms_code_error">验证码错误</string>
    <string name="login_dialog_toast_sms_identify_success">验证成功！</string>
    <string name="settings_title">设置</string>
    <string name="settings_log_out">退出登录</string>
    <string name="settings_edit_personal_info">编辑资料</string>
    <string name="settings_clear_cache">清除缓存</string>
    <string name="settings_check_version">检查版本</string>
    <string name="settings_notice_with_not_wifi">非WiFi网络播放提醒</string>
    <string name="settings_rights_reserved">All Rights Reserved By Xiaobei</string>
    <string name="settings_toast_log_out_success">退出成功</string>
    <string name="settings_log_out_confirm_dialog_title">退出确认</string>
    <string name="settings_log_out_confirm_dialog_cancle">取消</string>
    <string name="settings_log_out_confirm_dialog_quit">确认退出</string>
    <string name="settings_user_agreement">TopNews用户协议</string>
    <string name="share_dialog_weixin_not_installed">没有安装微信</string>
    <string name="user_agreement_title">TopNews用户协议</string>
    <string name="live_index">直播</string>
    <string name="live_list_cctv_channel">央视频道</string>
    <string name="live_list_wei_shi_channel">卫视频道</string>
    <string name="live_list_di_fang_channel">地方频道</string>
    <string name="live_list_ti_yu_channel">体育频道</string>
    <string name="live_list_ying_shi_channel">影视频道</string>
    <string name="live_list_overseas_channel">海外频道</string>
    <string name="news_detail_save_photo">保存</string>
    <string name="news_detail_save_photo_toast_success">保存成功</string>
    <string name="news_detail_save_photo_toast_failed">保存失败</string>
    <string name="main_activity_exit_toast">再按一次退出</string>
    <string name="share_dialog_toast_success">分享成功</string>
    <string name="share_dialog_toast_failure">分享失败</string>
    <string name="share_dialog_toast_cancel">分享取消</string>
    <string name="share_dialog_qq_not_installed">QQ未安装</string>
    <string name="share_dialog_weibo_not_installed">微博未安装</string>
    <string name="alert_dialog_mobile_network_message">正在使用非WiFi网络，播放将产生流量费用</string>
    <string name="alert_dialog_mobile_network_title">网络提示</string>
    <string name="alert_dialog_mobile_network_ok">继续</string>
    <string name="alert_dialog_mobile_network_cancle">取消</string>
    <string name="broke_news_cancle">取消</string>
    <string name="broke_news_title">我要爆料</string>
    <string name="broke_news_publish">发布</string>
    <string name="broke_news_hint_title">标题</string>
    <string name="broke_news_hint_content">分享身边新鲜事...</string>
    <string name="broke_news_hint_contact">联系电话（选填，仅工作人员可见）</string>
    <string name="broke_news_location_address">所在位置</string>
    <string name="broke_news_get_pic_camera">手机拍照</string>
    <string name="broke_news_get_pic_album">手机相册</string>
    <string name="broke_news_get_pic_cancle">取消</string>
    <string name="broke_news_toast_say_something">说点什么吧</string>
    <string name="broke_news_toast_phone_empty">联系电话不能为空</string>
    <string name="broke_news_toast_phone_invalid">手机号码不合法</string>
    <string name="broke_news_toast_send_success">发送成功！</string>
    <string name="broke_news_image_selector_title">图片</string>
    <string name="broke_news_image_selector_confirm">确定</string>
    <string name="broke_news_image_all_imgs">全部图片</string>
    <string name="broke_news_image_preview">预览</string>
    <string name="broke_news_image_preview_select">选择</string>
    <string name="broke_news_location_failed">定位失败，请稍后重试！</string>
    <string name="dialog_exit_confirm">确定退出？</string>
    <string name="dialog_exit_cancel">取消</string>
    <string name="dialog_exit_quit">退出</string>
    <string name="clear_cache_counting">正在计算...</string>
    <string name="clear_cache_dialog_title">确定删除所有缓存？</string>
    <string name="clear_cache_dialog_confirm">确定</string>
    <string name="clear_cache_dialog_cancel">取消</string>
    <string name="clear_cache_toast_success">清除成功！</string>
    <string name="edit_user_info_title">编辑资料</string>
    <string name="edit_user_info_portrait">头像</string>
    <string name="edit_user_info_portrait_from_album">从相册选择</string>
    <string name="edit_user_info_portrait_from_camera">拍照</string>
    <string name="edit_user_info_portrait_cancel">取消</string>
    <string name="edit_user_info_user_name">用户名</string>
    <string name="edit_user_info_user_name_input_title">请输入用户名</string>
    <string name="edit_user_info_user_name_input_type">支持中英文、数字</string>
    <string name="edit_user_info_user_name_input_confirm">确定</string>
    <string name="edit_user_info_user_name_input_cancel">取消</string>
    <string name="edit_user_info_introduce">介绍</string>
    <string name="edit_user_info_introduce_input_title">请输入介绍</string>
    <string name="edit_user_info_introduce_input_confirm">确定</string>
    <string name="edit_user_info_introduce_input_cancel">取消</string>
    <string name="edit_user_info_gender">性别</string>
    <string name="edit_user_info_gender_male">男</string>
    <string name="edit_user_info_gender_female">女</string>
    <string name="edit_user_info_gender_cancel">取消</string>
    <string name="edit_user_info_birthday">生日</string>
    <string name="edit_user_info_birthday_finish">完成</string>
    <string name="edit_user_info_birthday_toast_success">修改生日成功！</string>
    <string name="edit_user_info_birthday_error">抱歉，日期选择有误，请重新选择</string>
    <string name="edit_user_info_region">地区</string>
    <string name="edit_user_info_region_title">选择地区</string>
    <string name="not_wifi_dialog_warn_title">非WiFi网络播放提醒</string>
    <string name="not_wifi_dialog_warn_once">提醒一次</string>
    <string name="not_wifi_dialog_warn_every_time">每次提醒</string>
    <string name="not_wifi_dialog_warn_cancel">取消</string>
    <string name="check_version_toast_newest">已经是最新版本！</string>
    <string name="edit_user_info_region_beijing">北京市</string>
    <string name="edit_user_info_region_beijing_dongcheng">东城区</string>
    <string name="edit_user_info_region_beijing_xicheng">西城区</string>
    <string name="edit_user_info_region_beijing_chaoyang">朝阳区</string>
    <string name="edit_user_info_region_beijing_fengtai">丰台区</string>
    <string name="edit_user_info_region_beijing_shijingshan">石景山区</string>
    <string name="edit_user_info_region_beijing_haidian">海淀区</string>
    <string name="edit_user_info_region_beijing_mentougou">门头沟区</string>
    <string name="edit_user_info_region_beijing_fangshan">房山区</string>
    <string name="edit_user_info_region_beijing_tongzhou">通州区</string>
    <string name="edit_user_info_region_beijing_shunyi">顺义区</string>
    <string name="edit_user_info_region_beijing_changping">昌平区</string>
    <string name="edit_user_info_region_beijing_daxing">大兴区</string>
    <string name="edit_user_info_region_beijing_huairou">怀柔区</string>
    <string name="edit_user_info_region_beijing_pinggu">平谷区</string>
    <string name="edit_user_info_region_beijing_miyun">密云区</string>
    <string name="edit_user_info_region_beijing_yanqing">延庆区</string>
    <string name="edit_user_info_region_tianjin">天津市</string>
    <string name="edit_user_info_region_tianjin_heping">和平区</string>
    <string name="edit_user_info_region_tianjin_hedong">河东区</string>
    <string name="edit_user_info_region_tianjin_hebei">河北区</string>
    <string name="edit_user_info_region_tianjin_nankai">南开区</string>
    <string name="edit_user_info_region_tianjin_hongqiao">红桥区</string>
    <string name="edit_user_info_region_tianjin_dongli">东丽区</string>
    <string name="edit_user_info_region_tianjin_xiqing">西青区</string>
    <string name="edit_user_info_region_tianjin_jinnan">津南区</string>
    <string name="edit_user_info_region_tianjin_beichen">北辰区</string>
    <string name="edit_user_info_region_tianjin_wuqing">武清区</string>
    <string name="edit_user_info_region_tianjin_baodi">宝坻区</string>
    <string name="edit_user_info_region_tianjin_binhai">滨海新区</string>
    <string name="edit_user_info_region_tianjin_ninghe">宁河区</string>
    <string name="edit_user_info_region_tianjin_jinghai">静海区</string>
    <string name="edit_user_info_region_tianjin_jizhou">蓟州区</string>
    <string name="edit_user_info_region_hebei">河北省</string>
    <string name="edit_user_info_region_hebei_shijiazhuang">石家庄市</string>
    <string name="edit_user_info_region_hebei_tangshan">唐山市</string>
    <string name="edit_user_info_region_hebei_qinhuangdao">秦皇岛市</string>
    <string name="edit_user_info_region_hebei_handan">邯郸市</string>
    <string name="edit_user_info_region_hebei_baoding">保定市</string>
    <string name="edit_user_info_region_hebei_zhangjiakou">张家口市</string>
    <string name="edit_user_info_region_hebei_chengde">承德市</string>
    <string name="edit_user_info_region_hebei_cangzhou">沧州市</string>
    <string name="edit_user_info_region_hebei_langfang">廊坊市</string>
    <string name="edit_user_info_region_hebei_hengshui">衡水市</string>
    <string name="edit_user_info_region_hebei_xingtai">邢台市</string>
</resources>