<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xi.liuliu.topnews.activity.MainActivity">

    <FrameLayout
        android:id="@+id/flt_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </FrameLayout>

    <RadioGroup
        android:id="@+id/radio_group_main_activity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_home_activity_main"
            style="@style/main_tab_item"
            android:checked="true"
            android:drawableTop="@drawable/selector_main_tab_item_home"
            android:text="@string/home_index" />

        <RadioButton
            android:id="@+id/radio_button_live_activity_main"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/selector_main_tab_item_live"
            android:text="@string/live_index" />

        <RadioButton
            android:id="@+id/radio_button_mine_activity_main"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/selector_main_tab_item_mine_not_login"
            android:text="@string/mine_index_not_login" />

    </RadioGroup>
</LinearLayout>
