<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_dialog_bg"
    android:orientation="vertical">

    <Button
        android:id="@+id/dialog_login_close"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_gravity="right|top"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/dialog_login_close_button" />

    <TextView
        android:id="@+id/dialog_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_dialog_with_identify_code_title"
        android:textColor="#bb000000"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login_dialog_line_bg">

        <EditText
            android:id="@+id/dialog_login_input_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_phone_number"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/dialog_login_send_identify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="@string/login_send_identifying_code"
            android:textColor="#bb000000"
            android:textSize="17sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login_dialog_line_bg">

        <EditText
            android:id="@+id/dialog_login_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_input_identifying_code"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/dialog_login_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="@string/login_find_my_password"
            android:textSize="17sp"
            android:visibility="gone" />


    </LinearLayout>

    <TextView
        android:id="@+id/dialog_login_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/login_input_auto_login"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/dialog_login_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_login_dialog_entry_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_entry_topnews"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <CheckBox
                android:id="@+id/check_box_login_dialog_user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:id="@+id/user_agreement_login_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_dialog_user_agreement" />
        </LinearLayout>

    </RelativeLayout>


    <TextView
        android:id="@+id/dialog_login_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_with_count_password"
        android:textColor="@color/blue_light"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/more_ways_ll_login_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp">

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/grey_dark"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/login_more_ways"
                android:textSize="14sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:background="@color/grey_dark"></View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp">

            <ImageView
                android:id="@+id/we_chat_login_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_dialog_login_weichat" />

            <ImageView
                android:id="@+id/qq_login_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/selector_dialog_login_qq" />

            <ImageView
                android:id="@+id/wei_bo_login_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/selector_dialog_login_weibo" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>