<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_dialog_exit"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_exit_confirm"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#E3E3E3"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/cancel_dialog_log_out"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_exit_cancel"
                android:textColor="@color/blue5" />

            <View
                android:layout_width="2px"
                android:layout_height="match_parent"
                android:background="#E3E3E3"></View>

            <TextView
                android:id="@+id/confirm_dialog_log_out"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_exit_quit"
                android:textColor="@color/blue5" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>