<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xi.liuliu.topnews.activity.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/settings_left_back_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/left_back_icon_titlebar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="18dp"
            android:paddingTop="18dp"
            android:text="@string/settings_title"
            android:textSize="16sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/settings_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/settings_log_out"
        android:textColor="@color/red_light"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/settings_right_reserved"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/grey7"
        android:gravity="center|bottom"
        android:paddingBottom="15dp"
        android:text="@string/settings_rights_reserved"
        android:textColor="@color/grey_dark"
        android:textSize="16sp" />
</RelativeLayout>
