<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey32"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_dialog_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/edit_user_info_user_name_input_title"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/content_dialog_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray_light_1"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:minLines="4"
        android:padding="3dp"
        android:scrollbars="vertical"
        android:textSize="16sp" />
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/tip_dialog_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/edit_user_info_user_name_input_type"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/cancel_dialog_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="80dp"
            android:background="@drawable/selector_dialog_input_cancel"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/edit_user_info_user_name_input_cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/confirm_dialog_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_dialog_input_confirm"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/edit_user_info_user_name_input_confirm"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>
</LinearLayout>